[package]
name = "rusty_raft"
version = "0.1.0"
authors = ["bjorn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4"
log = "0.4.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stderrlog = "0.5.1"